# torch-tpu

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README  README.md  README_ppl_dev.md  README_zh.md  config.doxy  config_common.cmake  cross-toolchain.cmake  rebuild.sh  setup.py  sgDNN_to_tpuDNN.md  toolchain-cmodel.cmake  toolchain-device.cmake
firmware_core/: CMakeLists.txt  bm1684x-toolchain.cmake  cmodel.cmake  config.cmake  pcie.cmake  sg2260-toolchain.cmake  sg2260e-toolchain.cmake
firmware_core/include/: config.h  config.h.in  nodechip_active.h  nodechip_active_local.h  nodechip_batch_matmul.h  nodechip_batch_matmul_local.h  nodechip_binary.h  nodechip_binary_local.h  nodechip_cast.h  nodechip_common.h  nodechip_contiguous.h  nodechip_conv_float_parallel.h  nodechip_fc.h  nodechip_pooling_parallel.h  nodechip_relu_parallel.h  nodechip_softmax.h  nodechip_transpose.h  tpu_defs.h  tpu_kernel.h  tpu_utils.h
firmware_core/src/: _kernel_utils_func.c  debug.h  kernel_utils_func.h  nodechip_a16_matmul.c  nodechip_abs.c  nodechip_acos.c  nodechip_acosh.c  nodechip_active.c  nodechip_active_forward.c  nodechip_add.c  nodechip_add_ln_mm.c  nodechip_addcdiv.c  nodechip_addcmul.c  nodechip_amax_amin.c  nodechip_arange.c  nodechip_arg.c  nodechip_arithmetic_elementwise.c  nodechip_asin.c  nodechip_asinh.c  nodechip_atan.c  nodechip_atan2.c  nodechip_atanh.c  nodechip_avgpool_backward.c  nodechip_baddbmm.c  nodechip_batch_matmul.c  nodechip_bcast_add.c  nodechip_bcbinary.c  nodechip_binary_op.c  nodechip_bitwise_and.c  nodechip_bitwise_not.c  nodechip_bitwise_or.c  nodechip_bitwise_xor.c  nodechip_bn_backward.c  nodechip_bn_backward_v2.c  nodechip_bn_forward.c  nodechip_bn_forward_v2.c  nodechip_cbrt.c  nodechip_ceil.c  nodechip_clamp.c  nodechip_comparision.c  (+120 more)
firmware_core/src/backward/: nodechip_avgpool_backward.c  nodechip_bn_backward.c  nodechip_conv_backward.c  nodechip_eltwise_backward.c  nodechip_linear_backward.c  nodechip_maxpool_backward.c  nodechip_relu_backward.c
firmware_core/src/forward/: nodechip_eltwise_forward.c  nodechip_pooling_forward.c
libtorch-resnet-cifar/src/: CMakeLists.txt  cifar10.cpp  resnet-cifar-demo.cpp
libtorch_plugin/: CMakeLists.txt  README.md  TPUAllocator.cpp  TPUDeviceManager.cpp  TPUDeviceManager.h  TPUGuardImpl.h  TPUModule.cpp  TPUModule.h  TPUTorchUtils.h  compile.sh  test.cpp
libtorch_plugin/benchmark/: conv2d.cpp  conv2d_backward.cpp  mm.cpp
libtorch_plugin/common/: config.h  config.h.in
libtorch_plugin/distOps/: AllGather.cpp  AllReduce.cpp  AlltoallBase.cpp  Gather.cpp
libtorch_plugin/jit/: cpu_fallback_for_dynamo.cpp
libtorch_plugin/my_ops/: AddLnMm.cpp  Attention.cpp  LnMm.cpp  mpOps.cpp  ops.hpp
libtorch_plugin/ops/: ATriHFunc.cpp  Abs.cpp  Activation.cpp  Amp_foreach_non_finite_check_and_unscale.cpp  Arange.cpp  Arg.cpp  Attention.cpp  Batchnorm.cpp  Binary.cpp  Clamp.cpp  CommonActive.cpp  Concat.cpp  Convolution.cpp  CopyFrom.cpp  Dropout.cpp  Elementwise.cpp  Embedding.cpp  EmptyStrided.cpp  Exp.cpp  Fill.cpp  Full.cpp  Gather.cpp  GroupNorm.cpp  Index.cpp  Log.cpp  LogicalAnd.cpp  LogicalNot.cpp  LogicalOr.cpp  Loss.cpp  Matmul.cpp  Mlp.cpp  Mseloss.cpp  Neg.cpp  Norm.cpp  Normal.cpp  Permute.cpp  Pooling.cpp  Pow.cpp  Reciprocal.cpp  Reduction.cpp  (+13 more)
libtorch_plugin/test/: batchnorm.cpp  batchnorm_backward.cpp  conv2d.cpp  conv2d_backward.cpp  conv2d_backward_fp16.cpp  conv2d_fp16.cpp  gelu.cpp  gelu_backward.cpp  layernorm.cpp  layernorm_backward.cpp  reduce_sum.cpp  softmax.cpp  softmax_backward.cpp
libtorch_plugin/test_model/: bert.cpp  gpt2block.cpp  resnet50.cpp
libtorch_plugin/tpu/: TPUAllocator.cpp  TPUAllocator.h  TPUCtypeApi.cpp  TPUCtypeApi.h  TPUDeviceManager.cpp  TPUDeviceManager.h  TPUGuardImpl.cpp  TPUModule.cpp  TPUModule.h  TPUTorchUtils.cpp  TPUTorchUtils.h
scripts/package_src/: CMakeLists.txt  README.md  package_release_src.sh  setup.py
sgdnn/: CMakeLists.txt  config.cmake
sgdnn/include/: config_sgdnn_backend.h.in  message.h  pmu.hpp  sgdnn_api.h  sgdnn_api2.h  sgdnn_runtime.h
sgdnn/src/: device_mem_allocator.h  sgdnn.cpp  sgdnn2.cpp  sgdnn_helpers.h  sgdnn_pybind.cpp  sgdnn_pybind11.cpp  tpukernel_launcher.cpp  tpukernel_launcher.hpp  tpukernel_multicore.cpp  tpukernel_multicore.hpp
torch_tpu/: CMakeLists.txt  README.md  __init__.py  config.cmake
torch_tpu/accelerator/: __init__.py  cli.py
torch_tpu/accelerator/adaptor/: __init__.py
torch_tpu/accelerator/debugger/: framework_debugger.py
torch_tpu/csrc/: InitTpuBindings.cpp
torch_tpu/csrc/aten/: CustomRegisterSchema.cpp  TPUBmodelRuntime.cpp  TPUBmodelRuntime.h  TPUEvent.cpp  TPUEvent.h  TPUFormatCastHelper.cpp  TPUFormatCastHelper.h  TPUGeneratorImpl.cpp  TPUGeneratorImpl.h  TPUGraph.cpp  TPUGraph.h  TPUNativeFunctions.h  TensorFactories.cpp  python_custom_functions.cpp  python_custom_functions.h
torch_tpu/csrc/common/: config.h  config.h.in
torch_tpu/csrc/core/: Daemon.cpp  KernelManager.cpp  KernelManager.hpp  OpTimer.cpp  OpTimer.h  SG2260DeviceManager.cpp  TPUAddrHelper.h  TPUAllocator.cpp  TPUAllocator.h  TPUBmodel.cpp  TPUBmodel.h  TPUCachingAllocator.cpp  TPUCachingAllocator.h  TPUCtypeApi.cpp  TPUDeviceManager.cpp  TPUDeviceManager.h  TPUDeviceUtils.h  TPUException.h  TPUFunction.cpp  TPUFunction.h  TPUGuard.h  TPUGuardImpl.cpp  TPUGuardImpl.h  TPUHooksInterface.cpp  TPUHooksInterface.h  (+14 more)
torch_tpu/dynamo/: FxGraphConvertor.py  FxMlirImportor.py  Readme.md  TpuMlirModule.py  __init__.py  compiler.py  main.py  test_fx.py  tpu_mlir_jit.py  utils.py
torch_tpu/tests/: hello_world.py
torch_tpu/tpu/: __init__.py  _versions.py  autocast_utils.py  backend.py  bmodel_runtime.py  bmrt.py  device.py  gen_sccl_rank_table.py  graphs.py  jit.py  memory.py  nn.py  optimer_utils.py  random.py  streams.py  utils.py  versions.py
torch_tpu/utils/: __init__.py  apply_revert_patch.py  c2c_topology.py  collect_env.py  compare.py  device_guard.py  module.py  sccl_rank_table.py  serialization.py  storage.py  tensor_methods.py  torch_funcs.py  utils.py
torch_tpu/workarounds/: __init__.py  workaround_helper.py
(+1013 files in other folders)
